[tool.poetry]
name = "dmd2"
version = "0.1.0"
description = ""
authors = ["Søren Godbersen <sogo@inspari.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
dash = "^3.0.1"
dash-bootstrap-components = "^2.0.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
